--- a/AA2_Dejillo.html
+++ b/AA2_Dejillo.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Learning Website Sign-up</title>
+  <title>Sign Up Form - AA2_Dejillo</title>
   <style>
+    body{
+      background: linear-gradient(to bottom right, #3e0aaff,#feblc0)
+    }
+    
     input, select, textarea {
       margin-bottom: 15px;
       padding: 5px;
@@ -39,7 +43,7 @@
 </head>
 <body>
 
-<h1>Sign up for our Learning Website</h1>
+<h1>Sign Up Sheet</h1>
 
 <form id="signup-form">
   <fieldset>
