--- a/AA2_Dejillo.html
+++ b/AA2_Dejillo.html
@@ -4,7 +4,9 @@
   <title>Sign Up Form - AA2_Dejillo</title>
   <style>
     body{
-      background: linear-gradient(to bottom right, #3e0aaff,#feblc0)
+      background-color: #f2e6ff; 
+      font-family: Arial, sans-serif;
+      color: #333;
     }
     
     input, select, textarea {
@@ -16,7 +18,7 @@
 
     input[type="submit"], input[type="reset"] {
       padding: 10px 20px;
-      background-color: #007bff;
+      background-color: #ff99cc;
       color: white;
       border: none;
       border-radius: 5px;
@@ -28,6 +30,7 @@
       border-radius: 10px;
       padding: 10px;
       margin-bottom: 20px;
+      background-color: #fff;
     }
 
     legend {
