--- a/AA2_Dejillo.html
+++ b/AA2_Dejillo.html
@@ -4,9 +4,7 @@
   <title>Sign Up Form - AA2_Dejillo</title>
   <style>
     body{
-      background-color: #f2e6ff; 
-      font-family: Arial, sans-serif;
-      color: #333;
+      background-color: #f2e9fb;
     }
     
     input, select, textarea {
@@ -18,15 +16,19 @@
 
     input[type="submit"], input[type="reset"] {
       padding: 10px 20px;
-      background-color: #ff99cc;
+      background-color: #ff85dd;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
 
+    input[type="submit"]:hover, input[type="reset"]:hover {
+      background-color: #ff5ec4;
+    }
+
     fieldset {
-      border: 2px solid #007bff;
+      border: 2px solid #ff85dd;
       border-radius: 10px;
       padding: 10px;
       margin-bottom: 20px;
@@ -34,7 +36,7 @@
     }
 
     legend {
-      color: #007bff;
+      color: #ff85dd;
       font-weight: bold;
     }
 
